<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/indigo">

        <TextView
            android:id="@+id/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white_primary"
            android:textStyle="bold"

            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/indigo">

        <TextView
            android:id="@+id/enter_symbol_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_symbol"

            android:textColor="@color/white_primary" />

        <EditText
            android:id="@+id/enterSymbolEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:hint="@string/enter_symbol_hint"
            android:inputType="text"
            android:textColor="@color/pink_secondary"
            android:textColorHint="@color/pink_secondary" />

        <Button
            android:id="@+id/enterSymbolButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_symbol_button" />


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/indigo">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_span="2"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/stock_symbol_quotes"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white_primary"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/white_primary">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            >


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/stockTableScrollView"></TableLayout>
        </ScrollView>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/clearSymbolButton"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_symbol"
            android:background="#ffffd994"
            android:textSize="16sp" />
    </TableRow>
</TableLayout>

